--- a/stone-parent/pom.xml
+++ b/stone-parent/pom.xml
@@ -37,6 +37,7 @@
         <jackson-annotations.version>2.13.4</jackson-annotations.version>
 
         <redisson.version>3.17.7</redisson.version>
+        <quartz.version>2.3.2</quartz.version>
     </properties>
 
     <parent>
@@ -89,12 +90,22 @@
                 <artifactId>commons-collections4</artifactId>
                 <version>${commons-collections.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>org.redisson</groupId>
                 <artifactId>redisson</artifactId>
                 <version>${redisson.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.quartz-scheduler</groupId>
+                <artifactId>quartz</artifactId>
+                <version>${quartz.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.quartz-scheduler</groupId>
+                <artifactId>quartz-jobs</artifactId>
+                <version>${quartz.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
