--- a/stone-app/src/main/resources/application.yml
+++ b/stone-app/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8080
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
@@ -10,6 +12,7 @@ spring:
       connection-timeout: 60000
       minimum-idle: 10
       maximum-pool-size: 20
+    name: xx-dataSource
   jpa:
     show-sql: true
     hibernate:
