--- a/stone-boot-starter/stone-boot-redis-starter/pom.xml
+++ b/stone-boot-starter/stone-boot-redis-starter/pom.xml
@@ -19,9 +19,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.roseyi</groupId>
+            <artifactId>stone-commons</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
         </dependency>
     </dependencies>
-
 </project>
