--- a/stone-commons/pom.xml
+++ b/stone-commons/pom.xml
@@ -65,6 +65,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
