--- a/stone-app/pom.xml
+++ b/stone-app/pom.xml
@@ -29,15 +29,15 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.querydsl</groupId>
-            <artifactId>querydsl-apt</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.querydsl</groupId>
-            <artifactId>querydsl-jpa</artifactId>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.querydsl</groupId>-->
+        <!--            <artifactId>querydsl-apt</artifactId>-->
+        <!--            <scope>provided</scope>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.querydsl</groupId>-->
+        <!--            <artifactId>querydsl-jpa</artifactId>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>com.roseyi</groupId>
@@ -122,24 +122,24 @@
             </resource>
         </resources>
         <plugins>
-            <plugin>
-                <groupId>com.mysema.maven</groupId>
-                <artifactId>apt-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>process</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>src/main/generated/</outputDirectory>
-                            <processors>
-                                <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
-                                <processor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</processor>
-                            </processors>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--            <plugin>-->
+            <!--                <groupId>com.mysema.maven</groupId>-->
+            <!--                <artifactId>apt-maven-plugin</artifactId>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <goals>-->
+            <!--                            <goal>process</goal>-->
+            <!--                        </goals>-->
+            <!--                        <configuration>-->
+            <!--                            <outputDirectory>src/main/generated/</outputDirectory>-->
+            <!--                            <processors>-->
+            <!--                                <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>-->
+            <!--                                <processor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</processor>-->
+            <!--                            </processors>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
         </plugins>
     </build>
 </project>
