--- a/stone-app/pom.xml
+++ b/stone-app/pom.xml
@@ -28,21 +28,39 @@
             <artifactId>stone-boot-quartz-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
-        <!--        <dependency>-->
-        <!--            <groupId>com.querydsl</groupId>-->
-        <!--            <artifactId>querydsl-apt</artifactId>-->
-        <!--            <scope>provided</scope>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>com.querydsl</groupId>-->
-        <!--            <artifactId>querydsl-jpa</artifactId>-->
-        <!--        </dependency>-->
-
         <dependency>
             <groupId>com.roseyi</groupId>
             <artifactId>stone-boot-redis-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-apt</artifactId>
+            <scope>provided</scope>
+            <classifier>jakarta</classifier>
+        </dependency>
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.11.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>0.11.5</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
+            <version>0.11.5</version>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -58,11 +76,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
         </dependency>
 
         <dependency>
@@ -94,7 +107,7 @@
     </dependencies>
 
     <build>
-        <finalName>ath-server</finalName>
+        <finalName>stone-app</finalName>
         <resources>
             <resource>
                 <filtering>true</filtering>
@@ -122,24 +135,6 @@
             </resource>
         </resources>
         <plugins>
-            <!--            <plugin>-->
-            <!--                <groupId>com.mysema.maven</groupId>-->
-            <!--                <artifactId>apt-maven-plugin</artifactId>-->
-            <!--                <executions>-->
-            <!--                    <execution>-->
-            <!--                        <goals>-->
-            <!--                            <goal>process</goal>-->
-            <!--                        </goals>-->
-            <!--                        <configuration>-->
-            <!--                            <outputDirectory>src/main/generated/</outputDirectory>-->
-            <!--                            <processors>-->
-            <!--                                <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>-->
-            <!--                                <processor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</processor>-->
-            <!--                            </processors>-->
-            <!--                        </configuration>-->
-            <!--                    </execution>-->
-            <!--                </executions>-->
-            <!--            </plugin>-->
         </plugins>
     </build>
 </project>
