--- a/stone-parent/pom.xml
+++ b/stone-parent/pom.xml
@@ -23,7 +23,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <spring.cloud-version>2021.0.4</spring.cloud-version>
+        <spring.cloud-version>2022.0.0</spring.cloud-version>
 
         <swagger.version>1.5.19</swagger.version>
         <guava.version>31.1-jre</guava.version>
@@ -35,7 +35,7 @@
         <commons-collections.version>4.4</commons-collections.version>
         <jackson-annotations.version>2.13.4</jackson-annotations.version>
         <swagger.version>1.6.2</swagger.version>
-        <jjwt.version>0.9.1</jjwt.version>
+        <jjwt.version>0.11.5</jjwt.version>
 
         <redisson.version>3.17.7</redisson.version>
         <quartz.version>2.3.2</quartz.version>
@@ -43,12 +43,13 @@
         <druid.version>1.1.17</druid.version>
 
         <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
+        <skipTests>true</skipTests>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.0</version>
+        <version>3.0.1</version>
     </parent>
 
     <dependencyManagement>
@@ -132,6 +133,7 @@
                 <artifactId>querydsl-apt</artifactId>
                 <version>${querydsl.version}</version>
                 <scope>provided</scope>
+                <classifier>jakarta</classifier>
             </dependency>
             <dependency>
                 <groupId>com.querydsl</groupId>
@@ -159,27 +161,6 @@
         <finalName>${project.artifactId}</finalName>
         <pluginManagement>
             <plugins>
-
-                <plugin>
-                    <groupId>com.mysema.maven</groupId>
-                    <artifactId>apt-maven-plugin</artifactId>
-                    <version>${apt-maven-plugin.version}</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>process</goal>
-                            </goals>
-                            <configuration>
-                                <outputDirectory>src/main/generated/</outputDirectory>
-                                <processors>
-                                    <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
-                                    <processor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</processor>
-                                </processors>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
-
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
